# Trabalho_Grafos

./: .gitignore  CMakeLists.txt  GrafoLista.cpp  MenuTrabalho.cpp  NoLista.cpp  Tabelas completa das heuristicas.xlsx  Thumbs.db  malditoToc.mdj  pseudo ideia guloso.txt
grafo_lista_adjacencia/: Arco.cpp  Arco.h  Aresta.h  Auxiliares.h  CMakeLists.txt  DiGrafo.cpp  DiGrafo.h  Dijkstra.h  Grafo.cpp  Grafo.cpp.save-failed  Grafo.h  GrafoHash.cpp  GrafoHash.h  GrafoLista.cpp  GrafoLista.h  Hashing.cpp  Hashing.h  LEIA MATEUS.txt  LEIA-ME.txt  Lista.h  MenuTrabalho.cpp  MenuTrabalho.h  No.cpp  No.cpp.save-failed  No.h  NoHash.cpp  NoHash.h  NoLista.cpp  NoLista.h  Thumbs.db  Trabalho_Grafos.cbp  Trabalho_Grafos.cscope_file_list  build_run.bat  build_run.sh  cg.workspace  grafo_lista_adjacencia.cbp  grafo_lista_adjacencia.cbp.xml  grafo_lista_adjacencia.depend  grafo_lista_adjacencia.layout  main.cpp  (+16 more)
grafo_lista_adjacencia/Desempenho/: hash_teste_prod_cartesiano.csv  lista_teste_prod_cartesiano.csv  tabela_heuristicas_resultados.csv  tabela_heuristicas_tempos.csv  teste_arco_ponte.csv  teste_arco_ponte_HASH.csv  teste_arco_ponte_LISTA.csv  teste_grafo_euleriano.csv  teste_kruskal.csv  teste_prim.csv  teste_prim_hash.csv  teste_prim_lista.csv  teste_prod_cartesiano.csv
grafo_lista_adjacencia/Desempenho/Estrutural/Testes Comuns/: Teste_Busca_HASH.csv  Teste_Busca_LISTA.csv  Teste_Insercao_HASH.csv  Teste_Insercao_LISTA.csv  Teste_Remocao_HASH.csv  Teste_Remocao_LISTA.csv
grafo_lista_adjacencia/Desempenho/Estrutural/Testes com Hash sem colisao/: Teste_Busca_HASH.csv  Teste_Busca_LISTA.csv  Teste_Insercao_HASH.csv  Teste_Insercao_LISTA.csv  Teste_Remocao_HASH.csv  Teste_Remocao_LISTA.csv
grafo_lista_adjacencia/Desempenho/Heuristicas/: 01 - 3271.stp.csv  02 - 23.stp.csv  05 - 342.stp.csv  06 - 575.stp.csv  07 - 59797.stp.csv  08 - 236949.stp.csv  10 - 1172.stp.csv  Tabelas completa das heuristicas.xlsx
grafo_lista_adjacencia/Desempenho/Heuristicas/1/: 01 - 3271.stp.csv  02 - 23.stp.csv  03 - 2338.stp.csv  04 - 4003.stp.csv  05 - 342.stp.csv  07 - 59797.stp.csv  08 - 236949.stp.csv  09 - 121106.stp.csv
grafo_lista_adjacencia/Desempenho/Heuristicas/2/: 01 - 3271.stp.csv  02 - 23.stp.csv  03 - 2338.stp.csv  04 - 4003.stp.csv  05 - 342.stp.csv  09 - 121106.stp.csv  10 - 1172.stp.csv
grafo_lista_adjacencia/Desempenho/Heuristicas/3/: 01 - 3271.stp.csv  (+4 more)
grafo_lista_adjacencia/Graficos desempenho/: Thumbs.db
grafo_lista_adjacencia/Saidas/: AMG_Prim_[LISTA] as_graph_weighted.txt.grafo  AMG_Prim_gc10.grafo  FMG_Kruskal_g1.grafo  percurso_largura_c15.arv  percurso_largura_completo.arv  percurso_largura_e25.arv  percurso_profundidade_[HASH] grafo_10000_2.txt.arv  percurso_profundidade_c15.arv  percurso_profundidade_e25.arv  percurso_profundidade_gc15.arv  produto_cartesiano_(g1)_x_(g1).grafo  subgrafo_induzido_g1.grafo  subgrafo_induzido_gc20.grafo
grafo_lista_adjacencia/__MACOSX/: ._as_graph.txt  ._as_graph_weighted.txt  ._grafo_10000_1.txt  ._grafo_10000_2.txt  ._grafo_10000_3.txt  ._grafo_10000_4.txt  ._grafo_10000_5.txt  ._grafo_10000_6.txt  ._grafo_10000_7.txt  ._grafo_10000_8.txt  ._grafo_1000_1.txt  ._grafo_1000_2.txt  ._grafo_1000_3.txt  ._grafo_1000_4.txt  ._grafo_1000_5.txt  ._grafo_1000_6.txt  ._grafo_1000_7.txt  ._grafo_1000_8.txt
grafo_lista_adjacencia/include/: Auxiliares.h  Dijkstra.h  Grafo.h  GrafoHash.h  GrafoLista.h  Hashing.h  MenuTrabalho.h  No.h  NoHash.h  NoLista.h  Testes.h
grafo_lista_adjacencia/instancias/arcos_ponderados/: as_graph_weighted.txt
grafo_lista_adjacencia/src/: Arco.cpp  Auxiliares.cpp  Auxiliares.h  Auxiliares.hpp  Circulo.h  Grafo.cpp  GrafoHash.cpp  GrafoLista.cpp  MenuTrabalho.cpp  No.cpp  NoHash.cpp  NoLista.cpp  __main.cpp  _linux64.cbp  _windows.cbp  criarTabelas.cpp  main.cpp  teste.cpp
grafo_lista_adjacencia/src/Grafo/: Arco.cpp  Arco.h  AuxTestes.h  AuxTestes.hpp  Dijkstra.h  Grafo.cpp  Grafo.h  No.cpp  No.h  main.cpp  main2.cpp
(+207 files in other folders)
